2006-09-18 Chad Fowler <chad@chadfowler.com>
      
        * lib/rubygems/remote_installer.rb
        Only show the last 3 gem versions on a multiplatform remote
        install list.

2006-09-18  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteInstaller::install): Added Hugh Hasse's patch for
	skipping gems on install.

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to 0.9.0.2.

	* lib/rubygems/version.rb (Gem::Dependency::hash): Added hash code
	calculation.
	(Gem::Version::hash): Added hash code calculation.
	(Gem::Requirement::hash): Added hash code calculation.

	* test/test_specification.rb (TestSpecificationEquality): Added
	tests for specification equality and hashing.

	* test/test_remote_installer.rb
	(TestRemoteInstaller::test_installer_has_proxy_uri): Added tests
	for proper proxy initialization in RemoteFetcher.

	* test/test_version_comparison.rb (TestVersionEquality): Added
	tests for version equality and hashing.
	(TestRequirementEquality): Added tests for requirement equality.

	* lib/rubygems/specification.rb (Gem::Specification::hash): Added
	a hash method and improved equality testing.

2006-09-15  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems.rb (Gem::OperationNotSupportedError::searcher):
	Moved searcher initialization into Gem module and added Mutex
	protection.

2006-08-22  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/remote_installer.rb (Gem::RemoteInstaller::download_gem):
	Changed proxy arg to fetcher_class.new to use the
	@options[:http_proxy] rather than the @proxy_uri attribute.  The
	@proxy_uri value was never set.  Tried the proxy option using
	--http-proxy, the ENV var http_proxy and with no proxy.

2006-08-12  Jim Weirich  <jim@weirichhouse.org>

	* bin/index_gem_repository.rb (Indexer::sanitize): Added a
	sanitize step to the gem index generation in the hope of avoiding
	problems with non-ASCII names in the yaml data.

2006-06-14  Jim Weirich  <jim@weirichhouse.org>
